Moved some static methods to a utils class and completed mock tests